# ray-tracing

./: .gitignore  CMakeLists.txt
include/: camera.h  dmodel.cuh  matrix.h  model.h  render.h  shape.h  transform.h  util.h
include/core/: camera.h  material.h  matrix.h  model.h  primitive.h  random.h  render.h  scene.h  shape.h  transform.h  util.h
include/cuda/: helper_cuda.h  helper_functions.h
include/light/: lightSource.h  quadLightSource.h  sphereLightSource.h
include/shape/: cube.h  sphere.h  triangle.h
resources/Scene01/: cup.cfg
resources/Scene02/: room.cfg  room.mtl
resources/Scene03/: VeachMIS.cfg
resources/Scene04/: room.cfg  room.mtl
src/: camera.cpp  main.cpp  matrix.cpp  model.cpp  render.cpp  render.cu  transform.cpp
src/core/: camera.cpp  matrix.cpp  model.cpp  scene.cpp  transform.cpp
src/light/: quadLishtSource.cpp  sphereLightSource.cpp
src/shape/: cube.cpp  sphere.cpp  triangle.cpp
src/test/: test_assimp.cpp  test_mesh.cpp  test_sphere.cpp
